# tap-tiktok

./: .gitignore  README.md  meltano.yml  pyproject.toml  tap-tiktok.sh  tox.ini
.github/workflows/: ci_workflow.yml
helpers/custom-logger/: README.md  pyproject.toml  setup.py
helpers/custom-logger/custom_logger/: handler.py
tap_tiktok/: client.py  pagination.py  streams.py  tap.py
tap_tiktok/clients/: __init__.py  audience_report.py  base.py  basic_report.py  report.py
tap_tiktok/new_streams/reports/: __init__.py  ad.py  campaign.py
tap_tiktok/new_streams/reports/ad/: __init__.py  ad_audience_reports.py  ad_basic_reports.py
tap_tiktok/new_streams/reports/ad_groups/: __init__.py  ad_groups_basic_reports.py
tap_tiktok/new_streams/reports/adgroup/: __init__.py  adgroup_basic_reports.py
tap_tiktok/new_streams/reports/ads/: __init__.py  ads_audience_reports.py  ads_basic_reports.py
tap_tiktok/new_streams/reports/campaign/: __init__.py  campaign_audience_reports.py  campaign_basic_reports.py
tap_tiktok/new_streams/reports/campaigns/: __init__.py  campaigns_audience_reports.py  campaigns_basic_reports.py
tap_tiktok/tests/: __init__.py  test_core.py
