[tool.poetry]
name = "custom-logger"
version = "0.1.0"
description = ""
authors = ["Vinicius Justo <vinicius@nekt.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
wheel = "^0.43.0"
setuptools = "^70.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
